--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,21 @@
-plugins {
-    id 'org.springframework.boot' version '2.5.6'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java'
+buildscript {
+    ext {
+        springBootVersion = '2.1.18.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
-group = 'com.crud'
+apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+
+group = 'com.dental-clinic'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -12,11 +23,18 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+repositories {
+    mavenCentral()
 }
 
-test {
-    useJUnitPlatform()
+dependencies {
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('mysql:mysql-connector-java')
+
+    compileOnly('org.projectlombok:lombok:1.18.22')
+    runtimeOnly('com.h2database:h2')
+    annotationProcessor('org.projectlombok:lombok:1.18.22')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+
 }
